rust/ffi_01/link_lib.rs/packages/my_app.c/src/LinkLib.h

/*! \file */
/*******************************************
 *                                         *
 *  File auto-generated by `::safer_ffi`.  *
 *                                         *
 *  Do not manually edit this file.        *
 *                                         *
 *******************************************/

#ifndef __RUST_LINK_LIB__
#define __RUST_LINK_LIB__
#ifdef __cplusplus
extern "C" {
#endif

/** <No documentation available> */
void
base_func (void);


#include <stdbool.h>

/** <No documentation available> */
void
close_static (
    bool is_trace);


#include <stddef.h>
#include <stdint.h>

/** \brief
 *  `&'lt [T]` but with a guaranteed `#[repr(C)]` layout.
 *
 *  # C layout (for some given type T)
 *
 *  ```c
 *  typedef struct {
 *  // Cannot be NULL
 *  T * ptr;
 *  size_t len;
 *  } slice_T;
 *  ```
 *
 *  # Nullable pointer?
 *
 *  If you want to support the above typedef, but where the `ptr` field is
 *  allowed to be `NULL` (with the contents of `len` then being undefined)
 *  use the `Option< slice_ptr<_> >` type.
 */
typedef struct slice_ref_int32 {
    /** \brief
     *  Pointer to the first element (if any).
     */
    int32_t const * ptr;

    /** \brief
     *  Element count
     */
    size_t len;
} slice_ref_int32_t;

/** \brief
 *  [`Box`][`rust::Box`]`<[T]>` (fat pointer to a slice),
 *  but with a guaranteed `#[repr(C)]` layout.
 *
 *  # C layout (for some given type T)
 *
 *  ```c
 *  typedef struct {
 *  // Cannot be NULL
 *  T * ptr;
 *  size_t len;
 *  } slice_T;
 *  ```
 *
 *  # Nullable pointer?
 *
 *  If you want to support the above typedef, but where the `ptr` field is
 *  allowed to be `NULL` (with the contents of `len` then being undefined)
 *  use the `Option< slice_ptr<_> >` type.
 */
typedef struct slice_boxed_int32 {
    /** \brief
     *  Pointer to the first element (if any).
     */
    int32_t * ptr;

    /** \brief
     *  Element count
     */
    size_t len;
} slice_boxed_int32_t;

/** <No documentation available> */
slice_boxed_int32_t
concat_array (
    bool is_trace,
    slice_ref_int32_t argu1,
    slice_ref_int32_t argu2);

/** <No documentation available> */
char *
concat_string (
    bool is_trace,
    char const * argu1,
    char const * argu2);

/** <No documentation available> */
void
free_array_i32 (
    bool is_trace,
    slice_boxed_int32_t array_boxed);

/** <No documentation available> */
void
free_string (
    bool is_trace,
    char * char_boxed);

/** <No documentation available> */
/** \remark Has the same ABI as `uint8_t` **/
#ifdef DOXYGEN
typedef
#endif
enum FruitEnum {
    /** <No documentation available> */
    FRUIT_ENUM_APPLE,
    /** <No documentation available> */
    FRUIT_ENUM_BLACKBERRY,
    /** <No documentation available> */
    FRUIT_ENUM_CHERRY,
    /** <No documentation available> */
    FRUIT_ENUM_FIG,
    /** <No documentation available> */
    FRUIT_ENUM_ORANGE,
}
#ifndef DOXYGEN
; typedef uint8_t
#endif
FruitEnum_t;

/** <No documentation available> */
typedef struct PureDataArgs {
    /** <No documentation available> */
    double argu_64;

    /** <No documentation available> */
    int32_t argu_32;

    /** <No documentation available> */
    uint16_t argu_16;

    /** <No documentation available> */
    FruitEnum_t argu_enum;
} PureDataArgs_t;

/** <No documentation available> */
typedef struct PureDataResult {
    /** <No documentation available> */
    double rtn_64;

    /** <No documentation available> */
    int32_t rtn_32;

    /** <No documentation available> */
    uint16_t rtn_16;

    /** <No documentation available> */
    FruitEnum_t rtn_enum;

    /** <No documentation available> */
    bool rtn_yn;
} PureDataResult_t;

/** <No documentation available> */
PureDataResult_t
pure_data (
    bool is_trace,
    bool argu1,
    int8_t argu2,
    PureDataArgs_t argu3);

/** <No documentation available> */
void
register_callback (
    bool is_trace,
    bool is_leak,
    void (*launch_event)(bool, bool, PureDataArgs_t, char *, slice_boxed_int32_t));

/** <No documentation available> */
uint32_t
static_counter (
    bool is_trace);

/** <No documentation available> */
void
static_data (
    bool is_trace);

/** <No documentation available> */
void
trigger_callback (
    bool is_trace);

/** <No documentation available> */
void
unregister_callback (
    bool is_trace);


#ifdef __cplusplus
} /* extern \"C\" */
#endif

#endif /* __RUST_LINK_LIB__ */