rust/ffi_01/link_lib.rs/packages/my_app_safe.cs/src/LinkLib.g.cs

/*! \file */
/*******************************************
 *                                         *
 *  File auto-generated by `::safer_ffi`.  *
 *                                         *
 *  Do not manually edit this file.        *
 *                                         *
 *******************************************/

#pragma warning disable IDE0044, IDE0049, IDE0055, IDE1006,
#pragma warning disable SA1004, SA1008, SA1023, SA1028,
#pragma warning disable SA1121, SA1134,
#pragma warning disable SA1201,
#pragma warning disable SA1300, SA1306, SA1307, SA1310, SA1313,
#pragma warning disable SA1500, SA1505, SA1507,
#pragma warning disable SA1600, SA1601, SA1604, SA1605, SA1611, SA1615, SA1649,

namespace LinkLib {
using System;
using System.Runtime.InteropServices;

public partial class Ffi {
    // 原本為:
    //   ```
    //   public partial class Ffi {
    //   #if IOS
    //       private const string RustLib = "link_lib.framework/link_lib";
    //   #else
    //       private const string RustLib = "link_lib";
    //   #endif
    //   }
    //   ```
    // 手動修改路徑為:
    private const string RustLib = "lib/FfiTest.so";
}

public partial class Ffi {
    [DllImport(RustLib, ExactSpelling = true)] public static extern
    void base_func ();
}

/// <summary>
/// <c>&'lt [T]</c> but with a guaranteed <c>#[repr(C)]</c> layout.
///
/// # C layout (for some given type T)
///
/// ```c
/// typedef struct {
/// // Cannot be NULL
/// T * ptr;
/// size_t len;
/// } slice_T;
/// ```
///
/// # Nullable pointer?
///
/// If you want to support the above typedef, but where the <c>ptr</c> field is
/// allowed to be <c>NULL</c> (with the contents of <c>len</c> then being undefined)
/// use the <c>Option< slice_ptr<_> ></c> type.
/// </summary>
[StructLayout(LayoutKind.Sequential, Size = 16)]
public struct slice_ref_int32_t {
    /// <summary>
    /// Pointer to the first element (if any).
    /// </summary>
    public IntPtr ptr;

    /// <summary>
    /// Element count
    /// </summary>
    public UIntPtr len;
}

/// <summary>
/// [<c>Box</c>][<c>rust::Box</c>]<c><[T]></c> (fat pointer to a slice),
/// but with a guaranteed <c>#[repr(C)]</c> layout.
///
/// # C layout (for some given type T)
///
/// ```c
/// typedef struct {
/// // Cannot be NULL
/// T * ptr;
/// size_t len;
/// } slice_T;
/// ```
///
/// # Nullable pointer?
///
/// If you want to support the above typedef, but where the <c>ptr</c> field is
/// allowed to be <c>NULL</c> (with the contents of <c>len</c> then being undefined)
/// use the <c>Option< slice_ptr<_> ></c> type.
/// </summary>
[StructLayout(LayoutKind.Sequential, Size = 16)]
public struct slice_boxed_int32_t {
    /// <summary>
    /// Pointer to the first element (if any).
    /// </summary>
    public IntPtr ptr;

    /// <summary>
    /// Element count
    /// </summary>
    public UIntPtr len;
}

public partial class Ffi {
    [DllImport(RustLib, ExactSpelling = true)] public static extern
    slice_boxed_int32_t concat_array (
        [MarshalAs(UnmanagedType.U1)]
        bool is_trace,
        slice_ref_int32_t argu1,
        slice_ref_int32_t argu2);
}

public partial class Ffi {
    [DllImport(RustLib, ExactSpelling = true)] public static extern
    IntPtr concat_string (
        [MarshalAs(UnmanagedType.U1)]
        bool is_trace,
        IntPtr argu1,
        IntPtr argu2);
}

public partial class Ffi {
    [DllImport(RustLib, ExactSpelling = true)] public static extern
    void free_array_i32 (
        [MarshalAs(UnmanagedType.U1)]
        bool is_trace,
        slice_boxed_int32_t array_boxed);
}

public partial class Ffi {
    [DllImport(RustLib, ExactSpelling = true)] public static extern
    void free_string (
        [MarshalAs(UnmanagedType.U1)]
        bool is_trace,
        IntPtr char_boxed);
}

public enum FruitEnum_t : byte {
    Apple,
    Blackberry,
    Cherry,
    Fig,
    Orange,
}

[StructLayout(LayoutKind.Sequential, Size = 16)]
public struct PureDataArgs_t {
    public double argu_64;

    public Int32 argu_32;

    public UInt16 argu_16;

    public FruitEnum_t argu_enum;
}

[StructLayout(LayoutKind.Sequential, Size = 16)]
public struct PureDataResult_t {
    public double rtn_64;

    public Int32 rtn_32;

    public UInt16 rtn_16;

    public FruitEnum_t rtn_enum;

    [MarshalAs(UnmanagedType.U1)]
    public bool rtn_yn;
}

public partial class Ffi {
    [DllImport(RustLib, ExactSpelling = true)] public static extern
    PureDataResult_t pure_data (
        [MarshalAs(UnmanagedType.U1)]
        bool is_trace,
        [MarshalAs(UnmanagedType.U1)]
        bool argu1,
        sbyte argu2,
        PureDataArgs_t argu3);
}


} /* LinkLib */
